[fix] client: dialogs are blurry

--- a/public/s/styles/scss/style.scss
+++ b/public/s/styles/scss/style.scss
@@ -490,3 +490,33 @@ button {
     .fab-thread { display: none; }
 }
 
+.modal {
+    &-container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+    }
+
+    &-wrapper-outer {
+        display: table;
+        table-layout: fixed;
+        height: 100%;
+        margin: auto;
+    }
+
+    &-wrapper {
+        position: relative;
+        display: table-cell;
+        vertical-align: middle;
+
+        > .modal {
+            position: relative;
+            top: auto;
+            left: auto;
+            transform: none;
+        }
+    }
+}
+
